# SquadAI

./: .env.template  .gitignore  README.md  async_main.py  main.py  requirements.txt  system_message.txt
squadai/: __init__.py  __main__.py  agent.py  squad.py  task.py
squadai/agents/: __init__.py  executor.py  parser.py
squadai/cli/: cli.py  create_pipeline.py  create_squad.py  evaluate_squad.py  install_squad.py  replay_from_task.py  reset_memories_command.py  run_squad.py  train_squad.py  utils.py
squadai/cli/templates/pipeline/: README.md  pyproject.toml
squadai/cli/templates/pipeline/crews/research_crew/: research_crew.py
squadai/cli/templates/pipeline/crews/write_linkedin_crew/: write_linkedin_crew.py
squadai/cli/templates/pipeline/crews/write_x_crew/: write_x_crew.py
squadai/cli/templates/pipeline/pipelines/: pipeline.py
squadai/memory/: memory.py
squadai/pipeline/: __init__.py  pipeline.py  pipeline_kickoff_result.py  pipeline_output.py
squadai/project/: __init__.py  annotations.py  pipeline_base.py  squad_base.py
squadai/routers/: __init__.py
squadai/squads/: __init__.py  squad_output.py
squadai/tasks/: __init__.py  conditional_task.py  task_output.py
squadai/tools/: agent_tools.py  cache_tools.py  tool_usage.py
squadai/translations/: en.json
squadai/types/: usage_metrics.py
squadai/utilities/: converter.py  formatter.py  logger.py  paths.py  planning_handler.py  prompts.py  rpm_controller.py  squad_json_encoder.py  token_counter_callback.py  (+3 more)
tool_reg/: __init__.py  file_tools.py  info_tools.py  scrape_tools.py  search_tools.py
(+91 files in other folders)
