[tool.poetry]
name = "{{folder_name}}"
version = "0.1.0"
description = "{{name}} using squadAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
squadai = { extras = ["tools"], version = ">=0.51.0,<1.0.0" }
asyncio = "*"

[tool.poetry.scripts]
{{folder_name}} = "{{folder_name}}.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"